--- a/src/app/modules/user/page/user-create/user-create.component.html
+++ b/src/app/modules/user/page/user-create/user-create.component.html
@@ -1,32 +1,42 @@
-<div style="padding: 10px;">
+<div style="padding-top: 2%;"></div>
 
-  <p>user-create works!</p>
+<div class="container">
 
-  <form class="example-form" [formGroup]="createUserData" (ngSubmit)="onSubmit()" enctype="multipart/form-data"  >
+  <h1>สร้างข้อมูล</h1>
 
-    <mat-form-field>
-      <mat-label>UserName</mat-label>
-      <input matInput formControlName="user_username" placeholder="UserName">
-    </mat-form-field>
+  <form [formGroup]="createUserData" (ngSubmit)="onSubmit()" enctype="multipart/form-data">
 
+      <div class="form-row">
 
-    <mat-form-field>
-      <mat-label>Password</mat-label>
-      <input matInput formControlName="user_password" placeholder="Password">
-    </mat-form-field>
+        <div class="form-group col-md-6">
+          <label >Username</label>
+          <input type="text" class="form-control" formControlName="user_username" placeholder="UserName">
+        </div>
 
+        <div class="form-group col-md-6">
+          <label >Password</label>
+          <input type="password" class="form-control" formControlName="user_password" placeholder="Password">
+        </div>
 
-    <input type="file" (change)="onFileSelected($event)" >
+      </div>
 
-    <div style="padding-bottom: 1%;"> </div>
+      <div style="padding-top: 1%;"></div>
 
+      <div class="form-row">
 
-    <button type="submit" mat-flat-button color="primary">Create Data</button>
+        <div class="form-group col-md-6">
+
+            <label >อัปโหลดไฟล์</label>
+            <input type="file" class="form-control" (change)="onFileSelected($event)">
+        </div>
+
+      </div>
+
+      <div style="padding-top: 1%;"></div>
+
+      <button class="btn btn-primary ">Create Data</button>
 
 
   </form>
-
-
-
 
 </div>
