--- a/src/app/modules/user/page/user-list/user-list.component.html
+++ b/src/app/modules/user/page/user-list/user-list.component.html
@@ -35,6 +35,7 @@
         <th scope="col">Username</th>
         <th scope="col">Password</th>
         <th scope="col">ไฟล์แนบ</th>
+        <th scope="col"></th>
       </tr>
     </thead>
 
@@ -46,6 +47,7 @@
         <td>{{element.user_username}}</td>
         <td>{{element.user_password}}</td>
         <td>{{element.attachFileName}}</td>
+        <td class="text-center" ><button (click)="btnDelete(element.user_id)" class="btn btn-danger">ลบข้อมูล</button></td>
       </tr>
 
     </tbody>
